@@ -12,15 +12,18 @@
  */
 package org.eclipse.ditto.services.connectivity.messaging.mqtt;
 
-import static org.eclipse.ditto.model.placeholders.PlaceholderFactory.newHeadersPlaceholder;
-import static org.eclipse.ditto.model.placeholders.PlaceholderFactory.newThingPlaceholder;
-import static org.eclipse.ditto.model.placeholders.PlaceholderFactory.newTopicPathPlaceholder;
+import static org.eclipse.ditto.services.models.connectivity.placeholders.ConnectivityPlaceholders.newEntityPlaceholder;
+import static org.eclipse.ditto.services.models.connectivity.placeholders.ConnectivityPlaceholders.newFeaturePlaceholder;
+import static org.eclipse.ditto.services.models.connectivity.placeholders.ConnectivityPlaceholders.newPolicyPlaceholder;
+import static org.eclipse.ditto.services.models.connectivity.placeholders.ConnectivityPlaceholders.newSourceAddressPlaceholder;
+import static org.eclipse.ditto.services.models.connectivity.placeholders.ConnectivityPlaceholders.newThingPlaceholder;
+import static org.eclipse.ditto.services.models.connectivity.placeholders.ConnectivityPlaceholders.newTopicPathPlaceholder;
+import static org.eclipse.ditto.services.models.placeholders.PlaceholderFactory.newHeadersPlaceholder;
 
 import java.text.MessageFormat;
 import java.util.AbstractMap;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -42,16 +45,17 @@ import org.eclipse.ditto.model.connectivity.ConnectionConfigurationInvalidExcept
 import org.eclipse.ditto.model.connectivity.Enforcement;
 import org.eclipse.ditto.model.connectivity.Source;
 import org.eclipse.ditto.model.connectivity.Target;
-import org.eclipse.ditto.model.placeholders.ExpressionResolver;
-import org.eclipse.ditto.model.placeholders.Placeholder;
-import org.eclipse.ditto.model.placeholders.PlaceholderFactory;
-import org.eclipse.ditto.model.placeholders.PlaceholderFilter;
-import org.eclipse.ditto.model.placeholders.SourceAddressPlaceholder;
-import org.eclipse.ditto.model.placeholders.ThingPlaceholder;
-import org.eclipse.ditto.model.placeholders.UnresolvedPlaceholderException;
 import org.eclipse.ditto.model.things.ThingId;
+import org.eclipse.ditto.services.connectivity.config.MqttConfig;
 import org.eclipse.ditto.services.connectivity.messaging.validation.AbstractProtocolValidator;
 import org.eclipse.ditto.services.models.connectivity.EnforcementFactoryFactory;
+import org.eclipse.ditto.services.models.connectivity.placeholders.SourceAddressPlaceholder;
+import org.eclipse.ditto.services.models.connectivity.placeholders.ThingPlaceholder;
+import org.eclipse.ditto.services.models.placeholders.ExpressionResolver;
+import org.eclipse.ditto.services.models.placeholders.Placeholder;
+import org.eclipse.ditto.services.models.placeholders.PlaceholderFactory;
+import org.eclipse.ditto.services.models.placeholders.PlaceholderFilter;
+import org.eclipse.ditto.services.models.placeholders.UnresolvedPlaceholderException;
 
 import com.hivemq.client.internal.util.UnsignedDataTypes;
 import com.hivemq.client.mqtt.datatypes.MqttQos;
@@ -68,11 +72,16 @@ public abstract class AbstractMqttValidator extends AbstractProtocolValidator {
     private static final String QOS = "qos";
 
     protected static final Collection<String> ACCEPTED_SCHEMES = List.of("tcp", "ssl");
-    protected static final Collection<String> SECURE_SCHEMES = Collections.unmodifiableList(
-            Collections.singletonList("ssl"));
+    protected static final Collection<String> SECURE_SCHEMES = List.of("ssl");
 
     private static final String ERROR_DESCRIPTION = "''{0}'' is not a valid value for MQTT enforcement. Valid" +
             " values are: ''{1}''.";
+
+    private final MqttConfig mqttConfig;
+
+    protected AbstractMqttValidator(final MqttConfig mqttConfig) {
+        this.mqttConfig = mqttConfig;
+    }
 
     @Override
     protected void validateSource(final Source source, final DittoHeaders dittoHeaders,
@@ -104,7 +113,7 @@ public abstract class AbstractMqttValidator extends AbstractProtocolValidator {
 
         validateTargetQoS(qos.get(), dittoHeaders, targetDescription);
         validateTemplate(target.getAddress(), dittoHeaders, newThingPlaceholder(), newTopicPathPlaceholder(),
-                newHeadersPlaceholder(), PlaceholderFactory.newFeaturePlaceholder());
+                newHeadersPlaceholder(), newFeaturePlaceholder());
     }
 
     /**
@@ -153,7 +162,7 @@ public abstract class AbstractMqttValidator extends AbstractProtocolValidator {
 
     protected static void validateEnforcementInput(final Enforcement enforcement,
             final Supplier<String> sourceDescription, final DittoHeaders dittoHeaders) {
-        final SourceAddressPlaceholder sourceAddressPlaceholder = PlaceholderFactory.newSourceAddressPlaceholder();
+        final SourceAddressPlaceholder sourceAddressPlaceholder = newSourceAddressPlaceholder();
         try {
             EnforcementFactoryFactory
                     .newEnforcementFilterFactory(enforcement, sourceAddressPlaceholder)
@@ -211,16 +220,23 @@ public abstract class AbstractMqttValidator extends AbstractProtocolValidator {
     }
 
     protected void validateSpecificConfig(final Connection connection, final DittoHeaders dittoHeaders) {
-        final MqttSpecificConfig mqttSpecificConfig = MqttSpecificConfig.fromConnection(connection);
+        final MqttSpecificConfig mqttSpecificConfig = MqttSpecificConfig.fromConnection(connection, mqttConfig);
         mqttSpecificConfig.getKeepAliveInterval().ifPresent(keepAlive -> {
             final long seconds = keepAlive.toSeconds();
             if (!UnsignedDataTypes.isUnsignedShort(seconds)) {
                 throw ConnectionConfigurationInvalidException
-                        .newBuilder("Keep alive interval '"+seconds+"' is not within the allowed range of [0, 65535] seconds.")
+                        .newBuilder("Keep alive interval '" + seconds +
+                                "' is not within the allowed range of [0, 65535] seconds.")
                         .description("Please adjust the interval to be within the allowed range.")
                         .dittoHeaders(dittoHeaders)
                         .build();
             }
+        });
+
+        mqttSpecificConfig.getMqttWillTopic().ifPresent(lastWillTopic -> {
+            validateAddress(lastWillTopic, false, dittoHeaders);
+            validateTargetQoS(mqttSpecificConfig.getMqttWillQos(), dittoHeaders,
+                    () -> MqttSpecificConfig.LAST_WILL_QOS);
         });
     }
 
@@ -288,13 +304,13 @@ public abstract class AbstractMqttValidator extends AbstractProtocolValidator {
     private static <T extends EntityId> String applyEntityPlaceholder(final String address, final T entityId,
             final Consumer<String> unresolvedPlaceholderListener) {
 
-        final List<Placeholder<CharSequence>> placeholders = Arrays.asList(
-                PlaceholderFactory.newThingPlaceholder(),
-                PlaceholderFactory.newPolicyPlaceholder(),
-                PlaceholderFactory.newEntityPlaceholder()
+        final List<Placeholder<EntityId>> placeholders = Arrays.asList(
+                newThingPlaceholder(),
+                newPolicyPlaceholder(),
+                newEntityPlaceholder()
         );
 
-        for (final Placeholder<CharSequence> placeholder : placeholders) {
+        for (final Placeholder<EntityId> placeholder : placeholders) {
             try {
                 final ExpressionResolver expressionResolver =
                         PlaceholderFactory.newExpressionResolver(placeholder, entityId);
